@@ -67,20 +67,11 @@ export(anova.gam, bam, bam.update, betar, cox.ph,concurvity, cSplineDes,
 importFrom(grDevices,cm.colors,gray,heat.colors,terrain.colors,topo.colors)
 importFrom(graphics,axis,box,contour,hist,lines,mtext, par, persp,plot,points,
            polygon,strheight,strwidth,text)
-#importFrom(stats,.checkMFClasses,.getXlevels, as.formula, anova,anova.glmlist,
-#           coef,cooks.distance,cor,delete.response,family,fitted,formula,
-#           gaussian,glm,influence,lm,logLik,median,model.frame,model.matrix,
-#           model.offset,na.pass,napredict,naresid,nlm,optim,pchisq,pf,pnorm,pt,
-#           predict,printCoefmat ,quantile,qqnorm, reformulate,residuals,rnorm,
-#           runif,termplot,terms,terms.formula, uniroot, 
-#           var,vcov)
 
 importFrom(stats,anova,influence,cooks.distance,logLik,vcov,residuals,predict,model.matrix)
 importFrom(nlme,Dim,corMatrix,logDet,pdConstruct,pdFactor,pdMatrix,getGroupsFormula,lme,varFixed,lmeControl)
-#import(nlme)
 importMethodsFrom(Matrix,t,colMeans,colSums,chol,solve,lu,expand)
 importFrom(Matrix,Diagonal,sparseMatrix,Matrix)
-#import(Matrix)
 importFrom(methods,cbind2)
 
 S3method(anova, gam)
